# deploytest

./: .coveragerc  pyproject.toml
.github/workflows/: main.yml
app/blog/: models.py  tests.py  views.py
app/blog/migrations/: 0001_initial.py
app/blog/templates/blog/: post-list.html
app/config/: settings.py  urls.py
